<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/update_photo_label"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Product Details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/image_product_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder" />

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords" />


        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_inventory_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>
    <!-- Set Price category -->
    <LinearLayout
        android:id="@+id/container_set_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_set_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_set_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_set_price"
                android:inputType="number|numberDecimal" />

        </RelativeLayout>
    </LinearLayout>


    <!-- Set Inventory category -->
    <LinearLayout
        android:id="@+id/container_set_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_set_inventory" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Inventory field -->
            <EditText
                android:id="@+id/edit_set_inventory"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_set_inventory"
                android:inputType="number" />

            <!-- Units for Inventory (units) -->
            <TextView
                android:id="@+id/label_set_inventory_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_set_inventory" />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/product_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order More"
        android:textSize="10sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="120dp"
        android:layout_marginTop="25dp"
        />
</LinearLayout>

</ScrollView>